# execution

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Cache.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake
include/: concepts.hpp  environment.hpp  in_place_stop_token.hpp  never_stop_token.hpp  spin_wait.hpp  stop_token_concepts.hpp  tag_invoke.hpp
test/: CMakeLists.txt  never_stop_token_test.cpp  tag_invoke_test.cpp
